# VTalk

./: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: gen-graphics.mjs  installer.nsi
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/commands/: auth.rs  calls.rs  crypto.rs  media.rs  mod.rs  notifications.rs  sync.rs  system.rs  upload.rs
src-tauri/src/crypto/: encryption.rs  key_manager.rs  keychain.rs  mod.rs  ratchet.rs
src-tauri/src/db/: migrations.rs  models.rs
src-tauri/src/desktop_service/: cache_manager.rs  media_processor.rs  mod.rs  notification_service.rs  offline_store.rs  sync_manager.rs  upload_queue.rs
src-tauri/src/media/: mod.rs  noise_suppression.rs  thumbnail.rs  transcoder.rs
src/features/: PlaceholderPage.tsx
src/hooks/: useGlobalShortcuts.ts
src/lib/: e2e.test.ts  e2e.ts  e2eRatchet.ts  logging.ts  notifPrefs.ts  ratchet.test.ts  ratchet.ts  upload.ts  utils.ts  x25519.test.ts  x25519.ts
src/stores/: authStore.ts  commentStore.ts  draftStore.ts  feedStore.ts  messageStore.ts  notificationStore.ts  postStore.ts  profileStore.ts  reelStore.ts  searchStore.ts  storyStore.ts  syncStore.ts  themeStore.ts  updaterStore.ts  uploadStore.ts
src/types/: database.ts  enums.ts  models.ts
supabase/: schema.sql
updates/: latest.json
(+87 files in other folders)
