[package]
name = "vtalk"
version = "0.3.0"
description = "VTalk - Desktop-first social platform"
authors = ["VTalk"]
edition = "2021"

[lib]
name = "vtalk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
dirs = "5"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
image = "0.25"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["sync-secret-service", "vendored"] }
once_cell = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = false
